[gd_scene load_steps=2 format=3 uid="uid://cox3n066ekdmn"]

[ext_resource type="Script" path="res://addons/overworld_client/overworld_dl_ui.gd" id="1_yr4dy"]

[node name="Overworld" type="VBoxContainer"]
offset_right = 335.0
offset_bottom = 161.0
size_flags_horizontal = 3
script = ExtResource("1_yr4dy")

[node name="SALabel" type="Label" parent="."]
layout_mode = 2
text = "Overworld Server Address"

[node name="ServerAddress" type="LineEdit" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "http://localhost:4433"

[node name="OLabel" type="Label" parent="."]
layout_mode = 2
text = "Output Directory"

[node name="OContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="OutputDir" type="LineEdit" parent="OContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "res://scripts"

[node name="OutputButton" type="Button" parent="OContainer"]
layout_mode = 2
text = "..."

[node name="SaveProtos" type="CheckBox" parent="."]
layout_mode = 2
tooltip_text = "Protobuf files will be saved to the output directory with your generated GDScript files"
text = "Keep protobuf files"
expand_icon = true

[node name="CompileButton" type="Button" parent="."]
layout_mode = 2
text = "Download & Compile!"

[node name="HttpRequest" type="HTTPRequest" parent="."]

[node name="AcceptDialog" type="AcceptDialog" parent="."]

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a Directory"
size = Vector2i(500, 300)
ok_button_text = "Select Current Folder"
file_mode = 2

[connection signal="pressed" from="OContainer/OutputButton" to="." method="_on_output_button_pressed"]
[connection signal="pressed" from="CompileButton" to="." method="_on_compile_button_pressed"]
[connection signal="request_completed" from="HttpRequest" to="." method="_on_http_request_request_completed"]
[connection signal="dir_selected" from="FileDialog" to="." method="_on_file_dialog_dir_selected"]
